# blendizzard

./: CHITSHEET.md  CLAUDE.md  Cargo.toml  TOPROMPT.md
bunt/: e2e-game.ts  set_admin.ts
bunt/bindings/blendizzard/src/: index.ts
bunt/bindings/number-guess/src/: index.ts
contracts/blendizzard/: Cargo.toml
contracts/blendizzard/src/: epoch.rs  errors.rs  events.rs  faction.rs  faction_points.rs  game.rs  lib.rs  rewards.rs  storage.rs  types.rs
contracts/blendizzard/src/tests/: blend_integration_tests.rs  blend_utils.rs  cross_epoch_tests.rs  dev_reward_tests.rs  emissions_tests.rs  epoch_edge_cases_tests.rs  fee_vault_utils.rs  fp_edge_cases_tests.rs  (+12 more)
contracts/number-guess/src/: lib.rs  test.rs
docs/: LAUNCHTUBE_SETUP.md  REAL-EMISSIONS-TESTING-2025-11-07.md
frontend/: .env.example  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend-v2/: package.json  vite.config.ts
frontend-v2/src/components/: AccountPage.tsx
frontend-v2/src/lib/: contractService.ts  stellar.ts
frontend-v2/src/stores/: blendizzardStore.ts
frontend/src/: main.tsx
frontend/src/components/: GamesCatalog.tsx  NumberGuessGame.tsx
frontend/src/hooks/: useWallet.ts
frontend/src/services/: blendizzardService.ts  devWalletService.ts  feeVaultService.ts  launchtubeService.ts  numberGuessService.ts  walletService.ts
frontend/src/store/: turnstileSlice.ts
frontend/src/utils/: constants.ts  signerHelper.ts  transactionHelper.ts
game-frontend/src/hooks/: useAvailableFp.ts
game-frontend/src/pages/: GamePage.tsx
game-frontend/src/services/: blendizzardService.ts
(+15 files in other folders)
