[workspace]
resolver = "2"
members = [
  "contracts/*",
]

[workspace.dependencies]
soroban-sdk = "23.1.0"
soroban-fixed-point-math = { git = "https://github.com/kalepail/soroban-fixed-point-math" }
blend-contract-sdk = { git = "https://github.com/kalepail/blend-contract-sdk" }
sep-40-oracle = "1.3.0"
sep-41-token = "1.3.1"
fee-vault-v2 = { git = "https://github.com/kalepail/fee-vault-v2" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
